Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-62847

lastReadSeqno Monotonic exception "::lastReadSeqno) invariant failed:"

    XMLWordPrintable

Details

    • Untriaged
    • 0
    • Unknown

    Description

      Exception seen as follows

       CRITICAL Caught unhandled std::exception-derived exception. what(): Monotonic<m> (ActiveStream(eq_dcpq:"i":"AE23217F111AEFB7/0528E92BBF8F1215","a":"kafka-connector/4.1.13 (blah) java-dcp-client/0.47.0 Java/11.0.20 (Azul Systems, Inc.; OpenJDK 64-Bit Server VM; 11.0.20+8-LTS)" vb:121)::lastReadSeqno) invariant failed: new value (555) breaks invariant on current value (555)
      

      And this was generated from the assignment in ::snapshot

      This was only ever observed on a Kafka DCP connection, and seen twice. Analysis strongly suggests that at the time Kafka was connected to a replica vbucket.

      Possibly this was a vbucket that rolled back (the original issue occurred outside of memcached.log coverage), but yet to reproduce in unit tests anything similar. Timestamps from ns_server shows the exception occurred some minutes after vbucket became replica, so maybe not rollback related.

      No further insights to the cause known.

      Attachments

        For Gerrit Dashboard: MB-62847
        # Subject Branch Project Status CR V

        Activity

          People

            jwalker Jim Walker
            jwalker Jim Walker
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty